; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/handwired/frenchdev/keymaps/default/extr_keymap.c_press_underscore.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/handwired/frenchdev/keymaps/default/extr_keymap.c_press_underscore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shift_count = common dso_local global i64 0, align 8
@KC_LSHIFT = common dso_local global i32 0, align 4
@BP_UNDS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @press_underscore() #0 {
  %1 = load i64, i64* @shift_count, align 8
  %2 = icmp sgt i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32, i32* @KC_LSHIFT, align 4
  %5 = call i32 @unregister_code(i32 %4)
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i64, i64* @BP_UNDS, align 8
  %8 = trunc i64 %7 to i8
  %9 = call i32 @tap_code(i8 zeroext %8)
  %10 = load i64, i64* @shift_count, align 8
  %11 = icmp sgt i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %6
  %13 = load i32, i32* @KC_LSHIFT, align 4
  %14 = call i32 @register_code(i32 %13)
  br label %15

15:                                               ; preds = %12, %6
  ret void
}

declare dso_local i32 @unregister_code(i32) #1

declare dso_local i32 @tap_code(i8 zeroext) #1

declare dso_local i32 @register_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
